--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vida</title>
 </head>
+
 <body>
-    <h1<Vida/h1>
-    <h2> tudo sobre a vida </h2>
-    <p>Na jornada da vida, cada um de nós enfrenta desafios,celebra conquistas e experimenta momentos de introspecção.Este blog é um espaço para explorar temas que nos conectam como
-        seres humanos: temas que nos conectam como seres humanos
+    <h1>Vida do neymar</h1>
+    <img scr="img1.jpg"/>
+    <h2> tudo sobre neymar </h2>
+    <p>Neymar da Silva Santos Júnior, conhecido como Neymar, nasceu em 5 de fevereiro de 1992 em Mogi das Cruzes,
+        São Paulo. Desde cedo, mostrou talento para o futebol, ingressando na base do Santos FC aos 11 anos. Sua
+        ascensão foi rápida; aos 17 anos, estreou no time principal e ajudou o Santos a conquistar a Copa
+        Libertadores em 2011. Em 2013, Neymar se transferiu para o Barcelona, onde ganhou diversos títulos,
+        incluindo a Liga dos Campeões. Em 2017, tornou-se o jogador mais caro da história ao se transferir para o
+        Paris Saint-Germain. Além de seu sucesso nos clubes, Neymar também tem uma carreira internacional notável
+        com a seleção brasileira, conquistando a medalha de ouro nas Olimpíadas de 2016 e a Copa América em 2019.
     </p>
 </body>
+
 </html>
 </body>
+
 </html>
