--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Vida do neymar</h1>
-    <img scr="img1.jpg"/>
+    <img src="img1.jpg"/>
     <h2> tudo sobre neymar </h2>
     <p>Neymar da Silva Santos Júnior, conhecido como Neymar, nasceu em 5 de fevereiro de 1992 em Mogi das Cruzes,
         São Paulo. Desde cedo, mostrou talento para o futebol, ingressando na base do Santos FC aos 11 anos. Sua
