--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vida</title>
+    <style>
+        h1{
+            font-size: 50pt;
+            font-family: cursive;
+            text-align:center;
+        }
+    </style>
 </head>
 
 <body>
