--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             font-family: cursive;
             text-align:center;
         }
+
+        img{
+            width:600px;
+            height:600px;
+        }
     </style>
 </head>
 
