--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vida</title>
     <style>
-        h1{
+        h1 {
             font-size: 50pt;
             font-family: cursive;
-            text-align:center;
+            text-align: center;
         }
 
-        img{
-            width:800px;
-            height:600px;
+        img {
+            width: 800px;
+            height: 600px;
+        }
+
+        .centro{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
 
 <body>
     <h1>Vida do neymar</h1>
-    <img src="img1.jpg"/>
+    <div class="centro">
+        <img src="img1.jpg" />
+    </div>
     <h2> tudo sobre neymar </h2>
     <p>Neymar da Silva Santos Júnior, conhecido como Neymar, nasceu em 5 de fevereiro de 1992 em Mogi das Cruzes,
         São Paulo. Desde cedo, mostrou talento para o futebol, ingressando na base do Santos FC aos 11 anos. Sua
